<resources>
    <!-- ARRAY -->
    <string-array name="inventory">
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
    </string-array>

    <string-array name="repository">
        <item>1CFGS</item>
        <item>2CFGS</item>
        <item>3ESO</item>
    </string-array>

    <string name="app_name">Inventory</string>
    <string name="user">Username / email</string>
    <string name="password">Password</string>
    <string name="remember">Remember me</string>
    <string name="signup">Sign Up</string>
    <string name="signin">Sign In</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="sections">Sections</string>
    <string name="products">Products</string>
    <string name="dependencies">Dependencies</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="name">Name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shortname">Shortname</string>
    <string name="description">Description</string>
    <string name="errDescriptionEmpty">ERROR: Descripción vacía.</string>
    <string name="err_add_dependency">ERROR: Ya existe una dependencia igual.</string>
    <string name="err_add_section">ERROR: Ya existe una sección igual.</string>
    <string name="err_edit_dependency">ERROR: No se ha poidido editar la dependencia.</string>
    <string name="err_edit_section">ERROR: No se ha poidido editar la sección.</string>
    <string name="delete_dependency">Borrar dependencia</string>
    <string name="delete_body">Borrar la dependencia: </string>
    <string name="delete_body_section">Borrar la sección: </string>
    <string name="err_delete_dependency">ERROR: No se ha podido borrar la dependencia</string>
    <string name="err_delete_section">ERROR: No se ha podido borrar la sección</string>

    <string name="aceptar">Aceptar</string>
    <string name="action_delete">Se ha borrado la dependencia</string>

    <string name="undo">Deshacer</string>
    <string name="delete_section">Borrar sección</string>
    <string name="repository">Repositorio</string>
    <string name="about">About us</string>
    <string name="help">Help</string>
    <string name="search">Search</string>
    <string name="order">Order by</string>
    <string name="menu_options">Actions menu</string>
    <string name="info">Information</string>
    <string name="map">Map</string>
</resources>
