<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_dependency"
            android:title="@string/dependencies" />
        <item
            android:id="@+id/action_sections"
            android:title="@string/sections" />
        <item
            android:id="@+id/action_product"
            android:title="@string/products" />
    </group>

    <item android:title="@string/menu_options">
        <menu>
            <item
                android:id="@+id/settingsMenu"
                android:title="@string/settings"
                app:showAsAction="never" />
            <item
                android:id="@+id/help"
                android:title="@string/help" />
            <item
                android:id="@+id/about"
                android:title="@string/about" />
        </menu>
    </item>
</menu>