<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/profileMenu"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/profile"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/settingsMenu"
        android:title="@string/settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/help"
        android:title="@string/help" />
    <item
        android:id="@+id/about"
        android:title="@string/about" />
</menu>