<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_general_16dp"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/tvUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user" />

    <EditText
        android:id="@+id/edUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password" />

    <EditText
        android:id="@+id/edPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/chbRemember"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/remember" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/productsansbold"
            android:text="@string/signup" />
    </LinearLayout>

    <Button
        android:id="@+id/btSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/productsansbold"
        android:text="@string/signin" />

    <Button
        android:id="@+id/btGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorGoogle"
        android:fontFamily="@font/productsansbold"
        android:drawableStart=""
        android:text="@string/google"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btFacebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:backgroundTint="@color/colorFacebook"
        android:fontFamily="@font/productsansbold"
        android:text="@string/facebook"
        android:textColor="@android:color/white" />
</LinearLayout>