<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/AppThemeMaterial"
        android:fitsSystemWindows="true"
        tools:context=".ui.dash.DashBoardActivity"
        android:background="@drawable/bginventory">

        <TableLayout
            android:id="@+id/tblDash"
            style="@style/MaterialAlertDialog.MaterialComponents.Title.Panel.CenterStacked"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:alwaysDrawnWithCache="false"
            android:animateLayoutChanges="false"
            android:animationCache="true"
            android:gravity="center"
            android:orientation="vertical"
            android:stretchColumns="0,1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <TableRow
                android:id="@+id/tbrBash1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btnInventory"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/ic_select_all_black_24dp"
                    android:text="@string/app_name"
                    android:textSize="@dimen/text_18sp" />

                <Button
                    android:id="@+id/btnDependencies"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/ic_view_compact_black_24dp"
                    android:text="@string/dependencies"
                    android:textSize="@dimen/text_18sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btnSections"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/ic_subject_black_24dp"
                    android:text="@string/sections"
                    android:textSize="@dimen/text_18sp" />

                <Button
                    android:id="@+id/btnProducts"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/ic_local_offer_black_24dp"
                    android:text="@string/products"
                    android:textSize="@dimen/text_18sp" />
            </TableRow>

        </TableLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>