<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/tvMarginTop_24dp"
    android:theme="@style/AppThemeMaterial"
    tools:context=".ui.dash.login.SignUpActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiedUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:drawableStart="@drawable/ic_person_black_24dp"
            android:drawablePadding="@dimen/padding_10dp"
            android:hint="@string/username" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:errorEnabled="true"
        app:boxBackgroundColor="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="@+id/tilUser"
        app:layout_constraintStart_toStartOf="@+id/tilUser"
        app:layout_constraintTop_toBottomOf="@+id/tilUser">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiedEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:drawablePadding="@dimen/padding_10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPass1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:counterEnabled="true"
        app:counterMaxLength="15"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        app:boxBackgroundColor="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="@+id/tilUser"
        app:layout_constraintStart_toStartOf="@+id/tilUser"
        app:layout_constraintTop_toBottomOf="@+id/tilEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiedPass1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_lock_black_24dp"
            android:drawablePadding="@dimen/padding_10dp"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPass2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:counterEnabled="true"
        app:counterMaxLength="15"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        app:boxBackgroundColor="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="@+id/tilPass1"
        app:layout_constraintStart_toStartOf="@+id/tilPass1"
        app:layout_constraintTop_toBottomOf="@+id/tilPass1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiedPass2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_lock_black_24dp"
            android:inputType="textPassword"
            android:drawablePadding="@dimen/padding_10dp"
            android:hint="@string/password" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_btn_signin"
        android:fontFamily="@font/productsansbold"
        android:text="@string/signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilPass2"
        app:layout_constraintVertical_bias="0.32" />

</androidx.constraintlayout.widget.ConstraintLayout>